fix(dropzone): add full height, fixes variables colors, add overflow y scroll

--- a/packages/bootstrap/scss/components/_dropzone.scss
+++ b/packages/bootstrap/scss/components/_dropzone.scss
@@ -6,8 +6,7 @@
   --#{$prefix}dropzone-font-weight: #{$dropzone-font-weight};
 
   overflow: hidden;
-  height: 400px;
-  border-radius: var(--#{$prefix}dropzone-border-radius);
+  height: 100%;
 
   .align-center {
     display: flex;
@@ -23,15 +22,20 @@
     }
 
     .drop-file-wrapper {
-      border: solid 1px #e4e4e4;
+      border: solid 1px $gray-400;
       width: 100%;
       height: 100%;
       border-radius: var(--#{$prefix}dropzone-border-radius);
       opacity: 1;
+      overflow-y: auto;
 
       .drop-file-content {
+        background: $white;
+        position: sticky;
+        top: 0;
+        z-index: 100;
         width: 100%;
-        border-bottom: solid 1px #e4e4e4;
+        border-bottom: solid 1px $gray-400;
 
         .add-button {
           display: flex;
@@ -50,7 +54,7 @@
       z-index: -1;
 
       .drop-content {
-        max-width: 240px;
+        max-width: 24rem;
         text-align: center;
         margin: auto;
 
